# rag_module

./: .env  .env.example  .gitignore  .gitlab-ci.yml  README.md  __init__.py  fastapi.py  help.txt  main.py  pipeline.py  pyproject.toml  utils.py
config/: README.md  __init__.py  cors.py  paths.py  settings.py
debug/: __init__.py  debug_all.py  debug_final_docs.py  debug_ranking_docs.py  debug_similarity_score.py  debug_tokenize.py
documents/: __init__.py  document_builder.py
generation/: __init__.py  prompts.py  service.py
ingestion/: __init__.py  base_ingestor.py  corpus_build.py  ingest_pdf.py  test.py
llm/: __init__.py  gemini.py
loaders/: __init__.py  pdf_loader.py
parsing/: __init__.py  chapter_splitter.py  convert_roman_to_int.py  detail_content_splitter.py  metadata_builder.py  numbered_section_parser.py  objective_parser.py  review_discussion_splitter.py  star_bullet_parser.py  summary_objective_splitter.py
prompts/: __init__.py  routing.py
raw_text/: __init__.py  raw_text_builder.py
retrieval/: __init__.py  bm25.py  dedup.py  hybrid.py  pipeline.py  rerank.py  semantic.py
routing/: __init__.py  base_semantic_router.py  doc_router.py  intent_rules.py  parser.py  parser_res_json.py  pipeline.py  router.py  sample_build.py  samples.py  test.py
semantic_router/: __init__.py  route.py  router.py  samples.py
text_preprocess/: __init__.py  heading_fixer.py  text_cleaner.py
utils/: __init__.py  answer.py
vectorstore/: __init__.py  build_vectorstore.py  chroma.py  pinecone.py  redis.py  test.py
web/: .env.example  index.html  package.json  (+2 more)
(+9 files in other folders)
